# CRAFT-SLM-Reasoning

./: .gitignore  CRAFT_Execution_Plan.md  CRAFT_Master_Plan.md  LICENSE  README.md  command_lines.txt  diagnostic_v3.py  docs_generation_plan.md  environment.yml  patch_kl.py  requirements.txt
CRAFT-SLM-Reasoning-Framework-Qwen25/: pyproject.toml
CRAFT-SLM-Reasoning-Framework-Qwen25/Outputs/: difficulty_map.json
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/: __main__.py  cli.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/config/: __init__.py  default.yaml  qwen25_7b.yaml
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase0_probe/: sampler.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase1_sft/: __init__.py  data_loader.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase2_rl/: reward_combiner.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase2_rl/component_a/: __init__.py  reward_scorer.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase2_rl/component_b/: __init__.py  (+2 more)
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/phase3_deploy/: evaluator.py  quantizer.py  report_generator.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft/utils/: checkpoint_manager.py  hardware_detector.py
CRAFT-SLM-Reasoning-Framework-Qwen25/craft_delivery/: launch.sh  requirements_inference.txt
CRAFT-SLM-Reasoning-Framework-Qwen25/evaluation_results/: baseline_result.json  checkpoint-200_result.json  checkpoint-250_result.json  checkpoint-300_result.json  checkpoint-350_result.json  checkpoint-400_result.json  checkpoint-450_result.json  checkpoint-500_result.json  sft_result.json
(+107 files in other folders)
